# aws-lambda-python-docker

./: README.md  pyproject.toml
