[tool.poetry]
name = "aws-lambda-python-docker"
version = "0.1.0"
description = ""
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
